crates/context-macro/tests/constraints/invalid_token_variant.fail.stderr
error: Invalid variant for the token constraint.
  --> tests/constraints/invalid_token_variant.fail.rs:22:26
   |
22 |         token::authority = mint
   |                          ^
